# mark_i

./: .gitignore  :w  Cargo.toml  Makefile  README.md
python/: eink.py  leds.py
services/: eink.service  leds.service  mark_i.service
src/: clock.rs  main.rs
