[package]
name = "mark_1"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
is31fl3731 = {version = "1.0.0", features = ["charlie_bonnet"]}
rppal = {version = "0.13.1", features = ["hal"]}
chrono = "0.4.19"
blinkt = "0.6.0"
psutil = "3.2.2"
ssd1306 = "0.7.0"
embedded-graphics = "0.7.1"
